[gd_scene load_steps=7 format=3 uid="uid://ookvicf7pm0s"]

[ext_resource type="Texture2D" uid="uid://tnet4wqa3bwx" path="res://icon.svg" id="1_f71vx"]
[ext_resource type="Script" path="res://projectiles/projectile.gd" id="1_ggy6h"]
[ext_resource type="Script" path="res://components/move_component.gd" id="1_summs"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="2_wk8hg"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="3_hm0b6"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="4_ti51q"]

[node name="Projectile" type="Node2D"]
script = ExtResource("1_ggy6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_f71vx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("2_wk8hg")
sprite = NodePath("../Sprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_hm0b6")
sprite = NodePath("../Sprite2D")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("4_ti51q")

[node name="MoveComponent" type="Node" parent="."]
script = ExtResource("1_summs")
